poke/testsuite/poke.pkl/ass-diag-8.pk
/* { dg-do compile } */

(2 + 3) = 5; /* { dg-error "invalid l-value" } */
